Notes/wxWidgets build errors.txt
wxWidgets build errors.txt

From --disable-odcombobox
../src/propgrid/advprops.cpp: In member function ‘virtual bool wxSystemColourProperty::OnEvent(wxPropertyGrid*, wxWindow*, wxEvent&)’:
../src/propgrid/advprops.cpp:1322:9: error: ‘wxOwnerDrawnComboBox’ was not declared in this scope
         wxOwnerDrawnComboBox* cb =
         ^
../src/propgrid/advprops.cpp:1322:31: error: ‘cb’ was not declared in this scope
         wxOwnerDrawnComboBox* cb =
                               ^
../src/propgrid/advprops.cpp:1323:25: error: ‘wxOwnerDrawnComboBox’ does not name a type
             static_cast<wxOwnerDrawnComboBox*>(propgrid->GetEditorControl());
                         ^
../src/propgrid/advprops.cpp:1323:45: error: expected ‘>’ before ‘*’ token
             static_cast<wxOwnerDrawnComboBox*>(propgrid->GetEditorControl());
                                             ^
../src/propgrid/advprops.cpp:1323:45: error: expected ‘(’ before ‘*’ token
../src/propgrid/advprops.cpp:1323:46: error: expected primary-expression before ‘>’ token
             static_cast<wxOwnerDrawnComboBox*>(propgrid->GetEditorControl());
                                              ^
../src/propgrid/advprops.cpp:1323:77: error: expected ‘)’ before ‘;’ token
             static_cast<wxOwnerDrawnComboBox*>(propgrid->GetEditorControl());
                                                                             ^
Makefile:34832: recipe for target 'propgriddll_advprops.o' failed


Static CB Build related error below; appears to be a configuration issue. Trying monoLib shared to see if error goes away.

/usr/bin/ld: /opt/wx3.1.x_GTK2/lib/libwx_gtk2u_reducedGUI_aui-3.1.a(auilib_framemanager.o): relocation R_X86_64_32 against `_ZN17wxAuiManagerEvent12ms_classInfoE' can not be used when making a shared object; recompile with -fPIC
/opt/wx3.1.x_GTK2/lib/libwx_gtk2u_reducedGUI_aui-3.1.a: error adding symbols: Bad value
collect2: error: ld returned 1 exit status
Makefile:836: recipe for target 'libcodeblocks.la' failed

Most recent build error. Try doing monolithic static build to fix it.
g++: error: /opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI_propgrid-3.1.a: No such file or directory
g++: error: /opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI_richtext-3.1.a: No such file or directory
Makefile:836: recipe for target 'libcodeblocks.la' failed
make[3]: *** [libcodeblocks.la] Error 1
make[3]: Leaving directory '/home/stahta01/devel/version_control/codeblocks_reducedGUI-git/src/sdk'
